# ChartCF

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
prompts/: prompt_data_syn_descriptive.md  prompt_data_syn_reasoning.md  prompt_image_similarity_eval.md
scripts/: run_data_syn.sh  run_eval_internvl3_5_8b_instruct.sh  run_eval_qwen2_5_vl_7b_instruct.sh  run_eval_qwen3_vl_8b_instruct.sh  run_train_internvl3_5_8b_instruct.sh  run_train_qwen2_5_vl_7b_instruct.sh  run_train_qwen3_vl_8b_instruct.sh
scripts/eval/: run_eval_chartbench.sh  run_eval_chartqa.sh  run_eval_chartx.sh  run_eval_charxiv.sh  run_eval_ecdbench.sh
src/chartcf/data_syn/: cf_data_syn.py  compute_similarity.py  data_selection.py  merge_dpo_data.py  post_process.py
src/chartcf/evaluation/CharXiv/: convert_swift_results.py  prepare_swift_dataset.py
src/chartcf/evaluation/CharXiv/eval_utils/: descriptive_utils.py  evaluate.py  evaluate_parallel.py  get_stats.py  reasoning_utils.py
src/chartcf/evaluation/ChartBench/: convert_swift_results.py  evaluate.py  prepare_swift_dataset.py
src/chartcf/evaluation/ChartQA/: convert_swift_results.py  evaluate.py  prepare_swift_dataset.py
src/chartcf/evaluation/ChartX/: convert_swift_results.py  evaluate.py  prepare_swift_dataset.py
src/chartcf/evaluation/ECDBench/: convert_swift_results.py  evaluate.py  prepare_swift_dataset.py
src/chartcf/patches/: __init__.py  swift_rejected_response.py  swift_template.py
