[project]
name = "chartcf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.6.0",
    "deepspeed>=0.18.2",
    "liger-kernel==0.6.0",
    "ms-swift==3.11.2",
    "peft>=0.17.1",
    "pip>=25.3",
    "flash-attn>=2.8.3",
    "qwen-vl-utils==0.0.14",
    "dotenv>=0.9.9",
    "openai>=2.9.0",
    "scipy==1.16.3",
    "pandas==2.2.3",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "plotly==6.5.0",
    "mplfinance==0.12.10b0",
    "squarify==0.4.4",
    "networkx==3.3",
    "pillow==11.0.0",
    "scikit-learn==1.7.2",
    "kaleido>=1.2.0",
    "scikit-image>=0.25.2",
    "numpy==1.26.4",
    "fonttools==4.60.1",
    "pyarrow==20.0.0",
    "imagehash==4.3.2",
    "matplotlib-venn==1.1.2",
    "matplotlib-inline==0.1.7",
    "opencv-python==4.11.0.86",
    "langfuse>=3.10.5",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "ipython>=9.8.0",
    "transformers==4.57.3",
    "debugpy>=1.8.19",
    "langchain==0.0.352",
    "vllm>=0.11.0",
    "timm>=1.0.22",
    "jinja2",
]
[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "FALSE" }
